# coding-agent

./: .env.example  .gitignore  Dockerfile  benchmark.ipynb  docker-compose.yml  pyproject.toml  test.ipynb
.github/workflows/: issue_to_pr.yml  review_pr.yml
src/sdlc_agent/: agent_code.py  agent_review.py  config.py  github.py  llm.py
src/sdlc_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
